Fixes to theme contrast and functionality.

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -10,19 +10,11 @@
   --text-dark: #cfcfcf;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: var(--background-dark);
-    --text: var(--text-dark);
-  }
-}
-
 .section_container {
   @apply max-w-md sm:max-w-lg md:max-w-2xl lg:max-w-4xl xl:max-w-6xl py-10 mx-auto;
 }
 
-body {
-  background-color: var(--background);
-  color: var(--text);
-  transition: background-color 0.5s, color 0.5s
+.theme_transition {
+  @apply bg-[#f5f5f5] dark:bg-[#262626] transition-all duration-200
 }
+
